--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,4 +1,5 @@
 @import '../../layout/style/base/flex';
+@import '../../layout/style/base/breakpoints';
 
 .top-nav-bar {
   @include flexbox;
@@ -12,8 +13,31 @@
   mix-blend-mode: difference;
   will-change: transform;
 
+  @include media-breakpoint-up($breakpoint-xs) {
+    padding: 1.875rem;
+  }
+
   .logo-svg {
     fill: currentColor;
     width: 250px;
+  }
+
+  .navigation {
+    margin-left: auto;
+
+    .navigation-link {
+      font-weight: normal;
+      font-size: 0.875rem;
+      line-height: 1;
+      font-family: TungstenMedium,sans-serif;
+      -webkit-letter-spacing: 0.5em;
+      -moz-letter-spacing: 0.5em;
+      -ms-letter-spacing: 0.5em;
+      letter-spacing: 0.5em;
+      text-transform: uppercase;
+      display: inline-block;
+      position: relative;
+      z-index: 0;
+    }
   }
 }
