--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -29,7 +29,7 @@
       font-weight: normal;
       font-size: 0.875rem;
       line-height: 1;
-      font-family: TungstenMedium,sans-serif;
+      font-family: TungstenMedium, sans-serif;
       -webkit-letter-spacing: 0.5em;
       -moz-letter-spacing: 0.5em;
       -ms-letter-spacing: 0.5em;
@@ -38,6 +38,36 @@
       display: inline-block;
       position: relative;
       z-index: 0;
+
+      &:hover::after {
+        -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+        transform: scaleX(1);
+        -webkit-transform-origin: center left;
+        -ms-transform-origin: center left;
+        transform-origin: center left;
+      }
+
+      &::after {
+        content: '';
+        display: block;
+        width: calc(100% - 0.5em);
+        height: 40%;
+        position: absolute;
+        z-index: -1;
+        top: 60%;
+        left: 0;
+        background-color: #444;
+        -webkit-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transform-origin: center right;
+        -ms-transform-origin: center right;
+        transform-origin: center right;
+        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+        -webkit-transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+        transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+      }
     }
   }
 }
