--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,72 +1,47 @@
-@import '../../layout/style/base/flex';
 @import '../../layout/style/base/breakpoints';
+@import '../../layout/style/base/flex';
 
-.top-nav-bar {
+.header {
   @include flexbox;
   @include align-items(center);
-  width: 100%;
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  padding: 1.25rem;
-  mix-blend-mode: difference;
-  will-change: transform;
+  min-height: 550px;
+  height: calc(100vh - 60px);
+  position: relative;
+  transition-property: color, background-color;
+  transition-duration: 0.6s;
 
-  @include media-breakpoint-up($breakpoint-xs) {
-    padding: 1.875rem;
+  @include media-breakpoint-up($breakpoint-sm) {
+    height: 100vh;
   }
 
-  .logo-svg {
-    fill: currentColor;
-    width: 250px;
-  }
-
-  .navigation {
+  .header-lining {
+    width: 100%;
+    margin-right: auto;
     margin-left: auto;
+    max-width: 95rem;
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
 
-    .navigation-link {
-      font-weight: normal;
-      font-size: 0.875rem;
-      line-height: 1;
-      font-family: TungstenMedium, sans-serif;
-      -webkit-letter-spacing: 0.5em;
-      -moz-letter-spacing: 0.5em;
-      -ms-letter-spacing: 0.5em;
-      letter-spacing: 0.5em;
+    @include media-breakpoint-up($breakpoint-md) {
+      max-width: 100rem;
+      padding-right: 3.75rem;
+      padding-left: 3.75rem;
+    }
+
+    @include media-breakpoint-between($breakpoint-sm, $breakpoint-md) {
+      max-width: 96.25rem;
+      padding-right: 1.875rem;
+      padding-left: 1.875rem;
+    }
+
+    .header-title {
+      font-weight: 800;
       text-transform: uppercase;
-      display: inline-block;
-      position: relative;
-      z-index: 0;
+      line-height: 0.9;
+      font-size: 9vw;
 
-      &:hover::after {
-        -webkit-transform: scaleX(1);
-        -ms-transform: scaleX(1);
-        transform: scaleX(1);
-        -webkit-transform-origin: center left;
-        -ms-transform-origin: center left;
-        transform-origin: center left;
-      }
-
-      &::after {
-        content: '';
-        display: block;
-        width: calc(100% - 0.5em);
-        height: 40%;
-        position: absolute;
-        z-index: -1;
-        top: 60%;
-        left: 0;
-        background-color: #444;
-        -webkit-transform: scaleX(0);
-        -ms-transform: scaleX(0);
-        transform: scaleX(0);
-        -webkit-transform-origin: center right;
-        -ms-transform-origin: center right;
-        transform-origin: center right;
-        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-        -webkit-transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-        transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+      @include media-breakpoint-up(56.25em) {
+        font-size: 4.2vw;
       }
     }
   }
