--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -1,4 +1,12 @@
 @import './fonts/TungstenMedium/scss/font';
+@import './fonts/Sequel/scss/font';
+
+html {
+  font-size: 16px;
+  font-family: Sequel, sans-serif;
+  text-size-adjust: 100%;
+  overflow-x: hidden;
+}
 
 body {
   padding: 0;
@@ -6,6 +14,16 @@ body {
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
   transition: background-color 0.75s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 div,
@@ -48,4 +66,14 @@ a {
 [type='radio'] {
   box-sizing: border-box;
   padding: 0;
+}
+
+.container {
+  transform: none;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
+  transition: transform 1000ms cubic-bezier(0.8, 0, 0.2, 1) 0s;
 }
