--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -40,9 +40,54 @@
       line-height: 0.9;
       font-size: 9vw;
 
-      @include media-breakpoint-up(56.25em) {
+      @include media-breakpoint-up(95.3125em) {
         font-size: 4.2vw;
       }
+
+      @include media-breakpoint-up(56.25em) {
+        font-size: 4.375rem;
+      }
     }
+
+    .header-content-link {
+      position: absolute;
+      bottom: 6.25rem;
+      left: 50%;
+      transform: translate(-50%);
+
+      .animation-line-block {
+        padding: 20px 100px;
+        transition: opacity 1s ease 0s;
+        .animation-line {
+          width: 1px;
+          height: 35px;
+          background: currentcolor;
+          animation: 2s cubic-bezier(0.8, 0, 0.2, 1) 0s infinite normal none
+            running animation-117ohhb;
+        }
+      }
+    }
+  }
+}
+
+@keyframes animation-117ohhb {
+  0% {
+    transform-origin: 0% 0%;
+    transform: scale(1, 0);
+  }
+
+  50% {
+    transform-origin: 0% 0%;
+    transform: scale(1, 1);
+  }
+
+  50.001% {
+    transform-origin: 0% 100%;
+    transform: scale(1, 1);
+  }
+
+  100% {
+    transform-origin: 0% 100%;
+    transform: scale(1, 0);
   }
 }
