--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -1,3 +1,6 @@
+@import '../../layout/style/base/breakpoints';
+@import '../../layout/style/base/flex';
+
 .content {
   width: 100%;
   margin-right: auto;
@@ -16,5 +19,20 @@
     max-width: 100rem;
     padding-right: 3.75rem;
     padding-left: 3.75rem;
+  }
+
+  .content-lining {
+    display: grid;
+    --gap: 1.25rem;
+    grid-template-columns: repeat(var(--cols, 2), 1fr);
+    margin-top: -3.75rem;
+
+    @include media-breakpoint-up($breakpoint-xs) {
+      --cols: 3;
+    }
+
+    @include media-breakpoint-up($breakpoint-md) {
+      --gap: 1.875rem;
+    }
   }
 }
