Using emotion js to solve global color

--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -1,6 +1,5 @@
 @import './fonts/TungstenMedium/scss/font';
 @import './fonts/Sequel/scss/font';
-@import './palette';
 
 html {
   font-size: 16px;
@@ -13,7 +12,7 @@ body {
   padding: 0;
   margin: 0;
   color: rgb(255, 255, 255);
-  background-color: var(--global);
+  background-color: #000;
   transition: background-color 0.75s cubic-bezier(0.8, 0, 0.2, 1) 0s;
 }
 
