--- a/src/components/squareLink/style.scss
+++ b/src/components/squareLink/style.scss
@@ -1,37 +1,46 @@
 @import '../../layout/style/base/flex';
 
+.base-link {
+  @include flexbox;
+  @include align-items(center);
+  @include justify-content(center);
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+
+  &::after {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
+
+  .square-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    transform: scale(1.1);
+    opacity: 0;
+    position: absolute !important;
+    transition: all 0.75s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+
+    &:hover {
+      transform: scale(1.01);
+      opacity: 1;
+    }
+  }
+}
+
 .square-link {
-  > a {
-    @include flexbox;
-    @include align-items(center);
-    @include justify-content(center);
-    position: relative;
+  > .square-link-white {
+    @extend .base-link;
+    background: rgb(23, 23, 23);
+    transition: background 0.3s ease 0s;
+  }
+  > .square-link-black {
+    @extend .base-link;
     background: rgba(255, 255, 255, 0.1);
     transition: background 0.3s ease 0.6s;
-    overflow: hidden;
-    width: 100%;
-
-    &::after {
-        content: "";
-        display: block;
-        padding-top: 100%;
-    }
-
-    .square-img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      top: 0px;
-      left: 0px;
-      transform: scale(1.1);
-      opacity: 0;
-      position: absolute !important;
-      transition: all 0.75s cubic-bezier(0.8, 0, 0.2, 1) 0s;
-      
-      &:hover {
-        transform: scale(1.01);
-        opacity: 1;
-      }
-    }
   }
 }
