--- a/src/components/squareLink/style.scss
+++ b/src/components/squareLink/style.scss
@@ -8,10 +8,19 @@
   overflow: hidden;
   width: 100%;
 
+  > * {
+    position: relative;
+  }
+
   &::after {
     content: '';
     display: block;
     padding-top: 100%;
+  }
+
+  &:hover > .square-img{
+    transform: scale(1.01);
+    opacity: 1;
   }
 
   .square-img {
@@ -24,11 +33,6 @@
     opacity: 0;
     position: absolute !important;
     transition: all 0.75s cubic-bezier(0.8, 0, 0.2, 1) 0s;
-
-    &:hover {
-      transform: scale(1.01);
-      opacity: 1;
-    }
   }
 }
 
