--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -32,7 +32,7 @@
       --cols: 3;
     }
 
-    @include media-breakpoint-up($breakpoint-md) {
+    @include media-breakpoint-up($breakpoint-sm) {
       --gap: 1.875rem;
     }
   }
