--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,4 +1,5 @@
 @import '../layout/style/base/breakpoints';
+@import '../layout/style/base/flex';
 
 .video-section {
   position: relative;
@@ -23,7 +24,49 @@
     margin: 3.75rem 1.875rem;
 
     @include media-breakpoint-up($breakpoint-xs) {
-        margin: 8.125rem 1.875rem 5.625rem;
+      margin: 8.125rem 1.875rem 5.625rem;
+    }
+  }
+
+  .video-description {
+    @include flexbox;
+    @include align-items(center);
+    padding: 1.875rem;
+
+    > a {
+      font-weight: normal;
+      font-size: 0.875rem;
+      line-height: 1;
+      font-family: TungstenMedium, sans-serif;
+      letter-spacing: 0.5em;
+      text-transform: uppercase;
+      display: inline-block;
+      position: relative;
+      z-index: 0;
+      margin-top: 0.625rem;
+      @include media-breakpoint-up($breakpoint-xs) {
+        margin-left: auto;
       }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: left center;
+      }
+
+      &::after {
+        content: '';
+        display: block;
+        width: calc(100% - 0.5em);
+        height: 40%;
+        position: absolute;
+        z-index: -1;
+        top: 60%;
+        left: 0px;
+        background-color: rgb(68, 68, 68);
+        transform: scaleX(0);
+        transform-origin: right center;
+        transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1) 0s;
+      }
+    }
   }
 }
