--- a/src/components/content/style.scss
+++ b/src/components/content/style.scss
@@ -14,7 +14,7 @@
     padding-left: 1.875rem;
   }
 
-  @include media-breakpoint-up($breakpoint-md) {
+  @include media-breakpoint-up($breakpoint-tablet-sm) {
     max-width: 100rem;
     padding-right: 3.75rem;
     padding-left: 3.75rem;
@@ -32,7 +32,7 @@
       --cols: 3;
     }
 
-    @include media-breakpoint-up($breakpoint-sm) {
+    @include media-breakpoint-up($breakpoint-tablet-md) {
       --gap: 1.875rem;
     }
   }
