--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -10,7 +10,7 @@
   transition-property: color, background-color;
   transition-duration: 0.6s;
 
-  @include media-breakpoint-up($breakpoint-sm) {
+  @include media-breakpoint-up($breakpoint-tablet-md) {
     height: 100vh;
   }
 
@@ -22,13 +22,13 @@
     padding-right: 1.25rem;
     padding-left: 1.25rem;
 
-    @include media-breakpoint-up($breakpoint-md) {
+    @include media-breakpoint-up($breakpoint-tablet-sm) {
       max-width: 100rem;
       padding-right: 3.75rem;
       padding-left: 3.75rem;
     }
 
-    @include media-breakpoint-between($breakpoint-sm, $breakpoint-md) {
+    @include media-breakpoint-between($breakpoint-tablet-md, $breakpoint-tablet-sm) {
       max-width: 96.25rem;
       padding-right: 1.875rem;
       padding-left: 1.875rem;
@@ -44,11 +44,11 @@
         opacity: 0;
       }
 
-      @include media-breakpoint-up(56.25em) {
+      @include media-breakpoint-up($breakpoint-tablet-lg) {
         font-size: 4.2vw;
       }
 
-      @include media-breakpoint-up(95.3125em) {
+      @include media-breakpoint-up($breakpoint-laptop-lg) {
         font-size: 4.375rem;
       }
     }
