--- a/src/components/sectionTitle/style.scss
+++ b/src/components/sectionTitle/style.scss
@@ -5,7 +5,7 @@
   position: relative;
   font-size: 3.5vw;
   margin: 0px 0px -0.3em -0.45em;
-  @include media-breakpoint-up(56.25em) {
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
     font-size: 3.0vw;
   }
   @include media-breakpoint-up(95.3125em) {
