--- a/src/components/space/style.scss
+++ b/src/components/space/style.scss
@@ -1,8 +1,19 @@
 @import '../../layout/style/base/breakpoints';
 
-.space {
+.space-100-200 {
   height: 100px;
-  @include media-breakpoint-up(56.25em) {
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
     height: 200px;
   }
+}
+
+.space-20 {
+  height: 20px;
+}
+
+.space-50-100 {
+  height: 50px;
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
+    height: 100px;
+  }  
 }
