--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -45,5 +45,61 @@
         }
       }
     }
+
+    .link-murmur {
+      font-weight: 800;
+      line-height: 1;
+      font-family: Sequel, sans-serif;
+      text-transform: uppercase;
+      font-size: 5vw;
+      max-width: 16em;
+  
+      @include media-breakpoint-up($breakpoint-tablet-lg) {
+        font-size: 2.4vw;
+        max-width: 21em;
+      }
+  
+      > a {
+        position: relative;
+        &::after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 0.35em;
+          position: absolute;
+          top: 70%;
+          left: 0px;
+          background-color: currentcolor;
+          opacity: 0.4;
+          transition-duration: 0.3s;
+          transition-property: transform, opacity;
+          transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
+        }
+      }
+    }
+  }
+
+  .back-to-top-block {
+    @include align-self(flex-end);
+    @include flex(1,1,100%);
+    @include media-breakpoint-up($breakpoint-tablet-lg) {
+      @include flex(initial);
+    }
+    .back-to-top {
+      font-weight: normal;
+      font-size: 0.875rem;
+      line-height: 1;
+      font-family: TungstenMedium, sans-serif;
+      letter-spacing: 0.5em;
+      text-transform: uppercase;
+      color: rgb(119, 119, 119);
+      cursor: pointer;
+      margin: 0px -2.5rem -1.25rem;
+      padding: 2.5rem;
+      transition: opacity 0.3s ease 0s;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
   }
 }
