--- a/src/layout/style/base/_breakpoints.scss
+++ b/src/layout/style/base/_breakpoints.scss
@@ -8,7 +8,7 @@ $breakpoint-tablet-md: 768px !default;
 $breakpoint-tablet-lg: 900px !default;
 //tablets, less than 1080px
 //laptop, 1080px and up
-$breakpoint-tablet-sm: 1080px !default;
+$breakpoint-laptop-sm: 1080px !default;
 $breakpoint-laptop-md: 1300px !default;
 $breakpoint-laptop-lg: 1440px !default;
 //laptop, less than 1300px
