--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -1,5 +1,6 @@
 @import './fonts/TungstenMedium/scss/font';
 @import './fonts/Sequel/scss/font';
+@import './fonts/SourceSerifPro/scss/font';
 
 ::selection {
   background-color: rgba(200, 200, 200, 0.99);
@@ -73,12 +74,32 @@ a {
   padding: 0;
 }
 
-body, figure, h1, h2, h3, h4, h5, h6, p, ol, ul, blockquote {
+body,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+blockquote {
   font-weight: normal;
   margin: 0px;
   padding: 0px;
 }
 
-ol li, ul li {
+ol li,
+ul li {
   list-style: none;
+}
+
+strong {
+  font-weight: 800;
+  line-height: 1;
+  font-family: Sequel, sans-serif;
+  text-transform: uppercase;
+  font-size: 78%;
 }
