--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,5 +1,6 @@
 @import '../../layout/style/base/breakpoints';
 @import '../../layout/style/base/flex';
+@import '../../layout/style/base/common';
 
 .header {
   @include flexbox;
@@ -10,29 +11,12 @@
   transition-property: color, background-color;
   transition-duration: 0.6s;
 
-  @include media-breakpoint-up($breakpoint-tablet-md) {
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
     height: 100vh;
   }
 
   .header-lining {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 95rem;
-    padding-right: 1.25rem;
-    padding-left: 1.25rem;
-
-    @include media-breakpoint-up($breakpoint-tablet-sm) {
-      max-width: 100rem;
-      padding-right: 3.75rem;
-      padding-left: 3.75rem;
-    }
-
-    @include media-breakpoint-between($breakpoint-tablet-md, $breakpoint-tablet-sm) {
-      max-width: 96.25rem;
-      padding-right: 1.875rem;
-      padding-left: 1.875rem;
-    }
+    @extend .content-indentation;
 
     .header-title {
       font-weight: 800;
@@ -52,24 +36,60 @@
         font-size: 4.375rem;
       }
     }
+  }
+}
 
-    .header-content-link {
-      position: absolute;
-      bottom: 6.25rem;
-      left: 50%;
-      transform: translate(-50%);
+.header-content-link {
+  position: absolute;
+  bottom: 6.25rem;
+  left: 50%;
+  transform: translate(-50%);
 
-      .animation-line-block {
-        padding: 20px 100px;
-        transition: opacity 1s ease 0s;
-        .animation-line {
-          width: 1px;
-          height: 35px;
-          background: currentcolor;
-          animation: 2s cubic-bezier(0.8, 0, 0.2, 1) 0s infinite normal none
-            running animation-117ohhb;
-        }
-      }
+  .animation-line-block {
+    padding: 20px 100px;
+    transition: opacity 1s ease 0s;
+    .animation-line {
+      width: 1px;
+      height: 35px;
+      background: currentcolor;
+      animation: 2s cubic-bezier(0.8, 0, 0.2, 1) 0s infinite normal none
+        running animation-117ohhb;
+    }
+  }
+}
+
+.about-header {
+  @extend .content-indentation;
+  position: relative;
+
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
+    height: 100vh;
+    min-height: 54vw;
+  }
+
+  @include media-breakpoint-up($breakpoint-xs) {
+    height: 100vh;
+  }
+
+  .header-title {
+    font-weight: 800;
+    font-family: Sequel, sans-serif;
+    text-transform: uppercase;
+    font-size: 6vw;
+    line-height: 0.9;
+    position: relative;
+    transition: color 0.5s ease-out 0s;
+
+    .line {
+      opacity: 0;
+    }
+
+    @include media-breakpoint-up($breakpoint-tablet-lg) {
+      font-size: 4.2vw;
+    }
+
+    @include media-breakpoint-up($breakpoint-laptop-lg) {
+      font-size: 4.375rem;
     }
   }
 }
