--- a/src/components/space/style.scss
+++ b/src/components/space/style.scss
@@ -17,3 +17,22 @@
     height: 100px;
   }  
 }
+
+.space-50-100 {
+  height: 50px;
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
+    height: 100px;
+  }  
+}
+
+.space-110-60-21 {
+  height: 110vw;
+
+  @include media-breakpoint-up($breakpoint-tablet-md) {
+    height: 60vw;
+  }  
+
+  @include media-breakpoint-up($breakpoint-tablet-lg) {
+    height: 21vw;
+  }  
+}
