--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,5 +1,20 @@
+@import '../layout/style/base/breakpoints';
+
 .about {
-    position: relative;
-    z-index: 0;
-    background: rgb(0, 0, 0);
+  position: relative;
+  z-index: 0;
+  background: rgb(0, 0, 0);
+
+  p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.125rem;
+    line-height: 1.8;
+    font-family: SourceSerifPro, serif;
+    max-width: 33em;
+
+    @include media-breakpoint-up($breakpoint-tablet-md) {
+      font-size: 1.3125rem;
+    }
+  }
 }
