--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,80 +1,40 @@
 @import '../../layout/style/base/flex';
 @import '../../layout/style/base/breakpoints';
+@import '../../layout/style/base/common';
 
 .footer-container {
   @include flexbox;
   @include flex-wrap(wrap);
 
-  .social-links {
+  .social-container {
     @include flex(1, 1, 0%);
-    .sub-title {
-      font-weight: normal;
-      font-size: 0.875rem;
-      line-height: 1;
-      font-family: TungstenMedium, sans-serif;
-      letter-spacing: 0.5em;
-      text-transform: uppercase;
-    }
-    > ul {
-      display: inline-grid;
-      grid-auto-flow: column;
-      gap: 1.25rem;
+  }
 
-      @include media-breakpoint-up($breakpoint-xs) {
-        gap: 0.625rem;
-      }
+  .link-murmur {
+    @extend .sequel-text;
+    font-size: 5vw;
+    max-width: 16em;
 
-      .social-links {
-        font-weight: 800;
-        line-height: 1;
-        font-family: Sequel, sans-serif;
-        text-transform: uppercase;
-        font-size: 5vw;
-        transition: color 0.3s ease 0s;
-        @include media-breakpoint-up($breakpoint-tablet-lg) {
-          font-size: 2.4vw;
-        }
-
-        &:hover {
-          color: var(--color);
-        }
-
-        &:after {
-          content: '.';
-          color: var(--color);
-        }
-      }
+    @include media-breakpoint-up($breakpoint-tablet-lg) {
+      font-size: 2.4vw;
+      max-width: 21em;
     }
 
-    .link-murmur {
-      font-weight: 800;
-      line-height: 1;
-      font-family: Sequel, sans-serif;
-      text-transform: uppercase;
-      font-size: 5vw;
-      max-width: 16em;
-  
-      @include media-breakpoint-up($breakpoint-tablet-lg) {
-        font-size: 2.4vw;
-        max-width: 21em;
-      }
-  
-      > a {
-        position: relative;
-        &::after {
-          content: "";
-          display: block;
-          width: 100%;
-          height: 0.35em;
-          position: absolute;
-          top: 70%;
-          left: 0px;
-          background-color: currentcolor;
-          opacity: 0.4;
-          transition-duration: 0.3s;
-          transition-property: transform, opacity;
-          transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
-        }
+    > a {
+      position: relative;
+      &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 0.35em;
+        position: absolute;
+        top: 70%;
+        left: 0px;
+        background-color: currentcolor;
+        opacity: 0.4;
+        transition-duration: 0.3s;
+        transition-property: transform, opacity;
+        transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
       }
     }
   }
@@ -86,12 +46,7 @@
       @include flex(initial);
     }
     .back-to-top {
-      font-weight: normal;
-      font-size: 0.875rem;
-      line-height: 1;
-      font-family: TungstenMedium, sans-serif;
-      letter-spacing: 0.5em;
-      text-transform: uppercase;
+      @extend .tungsten-text;
       color: rgb(119, 119, 119);
       cursor: pointer;
       margin: 0px -2.5rem -1.25rem;
