--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,4 +1,5 @@
 @import '../layout/style/base/breakpoints';
+@import '../layout/style/base/common';
 
 .about {
   position: relative;
@@ -16,5 +17,68 @@
     @include media-breakpoint-up($breakpoint-tablet-md) {
       font-size: 1.3125rem;
     }
+  }
+
+  .white-section {
+    background-color: #fff;
+    color: #000;
+    h2 {
+      @extend .sequel-text;
+      font-size: 5vw;
+      @include media-breakpoint-up($breakpoint-tablet-lg) {
+        font-size: 2.4vw;
+      }
+    }
+
+    .expertise-list {
+      @extend .sequel-text;
+      font-size: 0.875rem;
+      line-height: 2.8;
+      @include media-breakpoint-up($breakpoint-tablet-md) {
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
+.resume-link {
+  @extend .tungsten-text;
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    width: calc(100% - 0.5em);
+    height: 0.35em;
+    position: absolute;
+    top: 70%;
+    left: 0px;
+    background-color: currentcolor;
+    opacity: 0.4;
+    transition-duration: 0.3s;
+    transition-property: transform, opacity;
+    transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
+  }
+}
+
+.email-link {
+  @extend .sequel-text;
+  font-size: 0.875rem;
+  position: relative;
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 0.35em;
+    position: absolute;
+    top: 70%;
+    left: 0px;
+    background-color: currentcolor;
+    opacity: 0.4;
+    transition-duration: 0.3s;
+    transition-property: transform, opacity;
+    transition-timing-function: cubic-bezier(0.55, 0, 0.1, 1);
+  }
+  @include media-breakpoint-up($breakpoint-tablet-md) {
+    font-size: 1rem;
   }
 }
