--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -102,3 +102,22 @@ strong {
   @extend .sequel-text;
   font-size: 78%;
 }
+
+table {
+  width: 100%;
+  min-width: 50rem;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.125rem;
+  line-height: 1.8;
+  font-family: SourceSerifPro, serif;
+  border-spacing: 0px;
+
+  td {
+    padding: 0.9375rem 0px;
+  }
+
+  tr:not(:last-child) td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);    
+  }
+}
