--- a/src/components/hoverImg/style.scss
+++ b/src/components/hoverImg/style.scss
@@ -1,18 +1,31 @@
+.hoverImg-child {
+  display: block;
+  max-width: initial;
+  width: 13.75em;
+  height: auto;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute !important;
+  transition: all 0.3s ease 0s;
+}
+
+
+
+
 .hoverImg {
   position: relative;
   cursor: default;
 
-  > video, .img {
-    display: block;
-    max-width: initial;
-    width: 13.75em;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    visibility: hidden;
-    opacity: 0;
-    position: absolute !important;
-    transition: all 0.3s ease 0s;
+  > video {
+    @extend .hoverImg-child;
+  }
+
+  > .img {
+    @extend .hoverImg-child;
+    height: 8.75em;
   }
 
   &:hover {
